--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
         "description": "Revolut.description",
         "authors": [
         {
-            "name": "Internet Limited",
+            "name": "WhiteHat",
             "url": "https://whitehat.ro"
         }
     ]
